# JARVISv7

./: .agentignore  .env.example  .flake8  .gitignore  2026-05-11-slice_h.3_pre-qual.md  20260423-slice_a-feedback.md  20260423-slice_a5-results-arm64.md  20260423-slice_a5-results-x64.md  20260423-slice_a5.md  20260425-slice_b.md  20260426-slice_c.md  20260428-slice_d.md  20260430-slice_e.md  20260503-slice_f.md  20260504-slice_g.md  20260505-slice_h.md  20260513-h8.md  20260513_slice-i.md  20260513_slice-i3.md  20260515_slice-j.md  20260526_slice-k.md  20260613_slice-m.md  20260614_slice-n-feedback.md  20260614_slice-n.md  20260615_slice-o.md  20260615_slice-p.md  20260615_slice-q.md  20260616_slice-r.md  20260625_architect-t.md  20260625_slice-t.md  20260625_slice-t2.md  20260626_architect-t2.md  20260626_architect-u.md  20260627_architect-u3_.md  20260627_feedback-u4_.md  20260627_slice-u2-report.md  20260627_slice-u2.md  20260627_slice-u3.md  20260627_slice-u4_.md  20260628_summary-u4_.md  (+20 more)
.github/: AGENTS.md  WORKFLOW_GUIDE.md  labels.json  pull_request_template.md
backend/: AGENTS.md
desktop/: AGENTS.md  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: backend.rs  lib.rs  main.rs
docs/: 20260630_slice-w.md  20260630_slice-w2.md  20260630_slice-x.md  20260701_slice-y.md  20260702_slice-z1.md  20260702_slice-z2.md  20260703_slice-z3.md  20260703_slice-z4.md  20260703_slice-z5.md  20260704_slice-z5b.md  20260706_slice-aa.md  20260708_kokoro-tts-qnn.md  20260708_slice-bb.md  20260710_slice-cc.md  (+17 more)
(+398 files in other folders)
