[package]
name = "jarvisv7-desktop"
version = "0.0.1"
description = "JARVISv7 durable desktop host"
edition = "2021"

[lib]
name = "jarvisv7_desktop"
path = "src/lib.rs"

[[bin]]
name = "jarvisv7-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
